fix(form) Slight styling improvements to get rid of horizontal scroll bar in forms with sub schemas

--- a/src/client/less/forms-angular-bs2-specific.less
+++ b/src/client/less/forms-angular-bs2-specific.less
@@ -47,14 +47,15 @@ form {
 
   .schema-head {
     padding: 0 0 0 180px;
+    border-top: 1px solid darken(@wellBackground, 7%);
+    border-bottom: 1px solid darken(@wellBackground, 7%);
   }
   .schema-foot {
     padding: 0 0 0 180px;
   }
 
   ol.sub-doc li {
-      border: 1px solid darken(@wellBackground, 7%);
-      .border-radius(@baseBorderRadius);
+    border-bottom: 1px solid darken(@wellBackground, 7%);
   }
 
   .form-inline > .sub-doc {
